<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrackMe</string>
    <string name="main_activity_title">Create New Track</string>
    <string name="start_service">Start sending coordinates</string>
    <string name="stop_service">Stop sending coordinates</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
	<!--<string name="errormessage">Oops, an error occured!</string>-->
	<string name="errormessage"></string>
	<string name="goOffline">Go Offline</string>
	<string name="goOnline">Go Online</string>
	<string name="show_current">Show Current Coordinates</string>
</resources>
